# DropCardRs

./: .gitignore  287.bootstrap.js  488.bootstrap.js  488.bootstrap.js.map  834.bootstrap.js  834.bootstrap.js.map  Cargo.toml  README.md  bootstrap.js  bootstrap.js.map  index.html  package-lock.json  package.json  webpack.config.js
.github/workflows/: deploy.yml
src/: cards.rs  lib.rs
www/: cards.js  index.html  index.js  package.json  style.css  webpack.config.js
