[package]
name = "flashcards"
version = "0.1.0"
authors = ["Software Developer"]
edition = "2021"
description = "A timed flashcard game"
repository = "https://github.com/zombiecalypse/DropCardRs"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rand = "0.9"
rand_chacha = "0.9"
unidecode = "0.3.0"


# getrandom with wasm-bindgen support
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
